Refactor: Improve Tauri API and UI components
- Use neverthrow for better error handling
- Add validateFiles function to Tauri API
- Add Throttle class to utils
- Refactor progress bar to use memo and transition
- Improve send page with drag and drop support

--- a/src/index.css
+++ b/src/index.css
@@ -65,27 +65,27 @@
   }
   body,
   html {
-    @apply bg-transparent size-full h-full text-foreground;
+    @apply size-full h-full bg-transparent text-foreground;
   }
   #root {
-    @apply overflow-hidden flex flex-col w-screen h-screen;
+    @apply flex h-screen w-screen flex-col overflow-hidden;
   }
 }
 
 @layer base {
   ::-webkit-scrollbar {
-    @apply w-2;
+    @apply w-0;
   }
-  ::-webkit-scrollbar-track {
+  /* ::-webkit-scrollbar-track {
     @apply bg-muted;
   }
   ::-webkit-scrollbar-thumb {
-    @apply bg-muted-foreground/50 rounded-full hover:bg-muted-foreground/75;
-  }
+    @apply rounded-full bg-muted-foreground/50 hover:bg-muted-foreground/75;
+  } */
   * {
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-[#f3f3f3] dark:bg-[#212121] text-foreground;
+    @apply bg-[#f3f3f3] text-foreground dark:bg-[#212121];
   }
 }
