feat: Add file icons to upload and download queues

--- a/src/index.css
+++ b/src/index.css
@@ -76,14 +76,11 @@
   ::-webkit-scrollbar {
     @apply w-0;
   }
-  /* ::-webkit-scrollbar-track {
-    @apply bg-muted;
-  }
-  ::-webkit-scrollbar-thumb {
-    @apply rounded-full bg-muted-foreground/50 hover:bg-muted-foreground/75;
-  } */
   * {
     @apply border-border outline-ring/50;
+  }
+  .non-container {
+    @apply -ml-3 w-[calc(100%+0.75rem+0.75rem)];
   }
   body {
     @apply bg-[#f3f3f3] text-foreground dark:bg-[#212121];
