Add theme cycle button

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
 @import 'tailwindcss';
 @import 'tw-animate-css';
 
+@custom-variant dark (&:where(.dark, .dark *));
+@custom-variant light (&:where(:not(.dark), :not(.dark) *));
+
 :root {
   --background: 0 0% 100%;
   --background-gr-a: 0 0% 90%;
