--- a/src/index.css
+++ b/src/index.css
@@ -164,6 +164,10 @@
       background: #202020;
     }
 
+    &:where(.dark *) {
+      background: #202020;
+    }
+
     &.mica {
       background: transparent !important;
     }
